# flake8-jusual

./: .gitignore  LICENSE  README.md  flake8_jusual.py  setup.cfg
src/: flake8_jusual.py
