[metadata]
name = flake8-jusual
version = 0.0.1
author = Julian Suarez
author_email = julian4suarez@gmail.com
description = Just a simple plugin with some restrictions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julian4suarez/flake8-jusual
project_urls =
    Bug Tracker = https://github.com/julian4suarez/flake8-jusual/issues
classifiers =
    Framework :: Flake8,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Topic :: Software Development :: Libraries :: Python Modules,
    Topic :: Software Development :: Quality Assurance,

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src