[metadata]
name = flake8-jusual
version = 0.1.0
author = Julian Suarez
author_email = julian4suarez@gmail.com
description = Plugin to lint additional rules of my personal style.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julian4suarez/flake8-jusual
project_urls =
    Bug Tracker = https://github.com/julian4suarez/flake8-jusual/issues
classifiers =
    Framework :: Flake8,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: MIT License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Topic :: Software Development :: Libraries :: Python Modules,
    Topic :: Software Development :: Quality Assurance,

[options]
packages = find:
python_requires = >=3.6
install_requires =
    flake8 >= 3.7

[options.packages.find]
where = .

[options.entry_points]
flake8.extension =
    JSA=flake8_jusual:Plugin